--- a/package.json
+++ b/package.json
@@ -9,9 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^1.1.3",
+    "@clerk/nextjs": "^5.0.8",
+    "@hono/clerk-auth": "^2.0.0",
+    "@hono/zod-validator": "^0.2.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "add": "^2.0.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "hono": "^4.3.6",
+    "lucide-react": "^0.378.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-use": "^17.5.0",
+    "shadcn-ui": "^0.8.0",
+    "sheet": "^0.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,6 +38,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
-  }
+    "eslint-config-next": "14.2.3",
+    "@types/bun": "latest"
+  },
+  "module": "index.ts",
+  "type": "module"
 }
